<resources>
    <string name="app_name">Airtnt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User.name</string>
    <string name="nav_header_subtitle">User.email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Translate</string>
    <string name="menu_slideshow">Navigation</string>
    <string name="menu_tools">Setting</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="login_signup">Login/Signup</string>
</resources>
