<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".RegisterActivity"
    android:background="@drawable/background4">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="231dp"
        android:layout_height="195dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/logo_airtnt"
        tools:srcCompat="@mipmap/logo_airtnt_round" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="190dp"
        android:layout_height="35dp"
        android:layout_marginTop="50dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_username"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_password"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_password"
        android:hint="@string/confirm_password"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#11A0BE"
        android:textColor="#ffffff"
        android:text="@string/register"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/already_registered"
            android:textColor="#ffffff"/>

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:text="@string/login"/>
    </LinearLayout>
</LinearLayout>